--- a/gb/1/2/22/n50279.md
+++ b/gb/1/2/22/n50279.md
@@ -4,7 +4,7 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>【纪元特稿】甘草： 毛泽东怎样教导美国人</h2>
 <h6></h6>
 <hr>
-	<p>素有“<ahref=http://www3.epochtimes.com/news/epochnews/main/2.md#1><font color=blue>中国</font></A>人民的朋友”之称的约翰?谢伟思，在抗日战争期间，曾任延安美军观察组成员，后被麦卡锡之流视为“通共分子”而受到政治追究。1970年，他写了一本《美国对华政策》(《党史通讯》1983年摘登过，中文译本由中国社会科学出版社于1989年出版)，对谁应负美国在中国失败之责一事做出新的解释。这是一本很有意思的书，特别是他记下了1944年8月23日同毛泽东长达六小时的谈话，读来饶有兴味。哎 </p>
+	<p>素有“<font color="blue">中国</font>人民的朋友”之称的约翰?谢伟思，在抗日战争期间，曾任延安美军观察组成员，后被麦卡锡之流视为“通共分子”而受到政治追究。1970年，他写了一本《美国对华政策》(《党史通讯》1983年摘登过，中文译本由中国社会科学出版社于1989年出版)，对谁应负美国在中国失败之责一事做出新的解释。这是一本很有意思的书，特别是他记下了1944年8月23日同毛泽东长达六小时的谈话，读来饶有兴味。哎 </p>
 <p>当时美国为避“干涉中国内政”之嫌，对给中共军援举棋不定，毛泽东苦口婆心地开导美国人，叫他们不要“放松自己的目标”。下面引文都是毛氏的话，见该书中中文版218——233页。“如果美国坚持给包括共产党在内的所有抗日军队提供武器，这不是干涉。如果美国只给国民党武器，实际上就是干涉，……能增进中国人民的真正利益的‘干涉’，就不是干涉。……我们不要求停止给国民党军队的一切援助。这样做的结果对战争不利。”“对待蒋介石，你们只有坚持自己的条件才能和他友好相处。一定要对他施加经常的、强有力的、一致的压力，使他屈服。不要放松你们的目标，要经常敲打他。美国现在的地位与珍珠港事件刚刚发生时完全不同了。再没有任何必要和理由去讨好、娇惯和安抚蒋介石。……美国可以在蒋介石顺从美国的要求时才援助他。运用美国影响的另一个方式是美国人多谈论美国的理想，每一个在中国或在美国与任何中国官员会晤的美国官员都可以谈谈民主。……每一个在华的美国士兵都应该是民主的活广告。他应该向他遇到的每一个中国人谈论民主。……说到底，我们中国人把你们美国人当做民主的典范。……美国人的存在从另一个消极意义上说也是好的，如果美国人分布得很广泛，他们将对国民党起到抑制作用。……因为国民党在如此众多的美国人注视下不敢逮捕学生并把他们投入集中营。”“美国报刊上批评国民党是有益的。它的效果也许不会立即表现出来。有时甚至可能暂时看起来有坏的反映。但如果它是公正的，就会使国民党犹豫和思考。”“如果美军不在中国登陆，这对中国来说将极为不幸，国民党将继续作为政府而存在，尽管它不具备作为政府的能力。”“我们还面临着官僚主义和腐化问题。……我们欢迎美国人、国民党或者其他任何人的监督和批评。”“中国人民懂得民主，并且需要民主。民主并不需要很长的经验(教育或‘训政’)。中国农民不是傻瓜，他们很精明，并像其他任何人一样关心自己的权力和利益。……中国共产党的政策不过是主张民主和社会改革。……甚至最保守的美国企业家在我们的纲领中也找不到任何值得反对的东西。中国必须工业化。这只有通过自由经营和借助外国资本的帮助才能做到。”“在中国人民和美国人民之间存在着同情、理解和相互关心的强有力联系。两国人民基本上都是民主的和尊重个人的，是热爱和平、不搞侵略和不当帝国主义的。”哎 </p>
 <p>毛泽东处于在野党地位时对美国政府与中国政府之间的关系的建议和对本党政纲的简述，他认为美国支持中国合法政府是“干涉”，不支持这个合法政府才是“不干涉”。在当代民族主义者看来，也许就是“站在西方强势群体一边，对于自己的弱势同胞施行逆向种族主义”。毛泽东“打鬼借助钟魁”，也是“民族自虐”了。他们有意或无意地混淆了一个事实：在美国面前，中国是弱势；但在中国人面前，蒋介石却是“强势群体”。问题在于：国民党坚持一党专政，不代表“自己的弱势同胞”的利益，才发生那一场“民主革命”。 </p>
 <p>毛泽东在这里表达了“人权高于主权”的思想。蒋介石认为主权高于人权，就大骂美国“娘稀皮”，“干涉中国内政”。但当美国总统杜鲁门发表声明，要中共交出武装，支持国民政府武力统一时，原来要求美国干涉的毛泽东就来个一百八十度大转弯，反对美国“干涉中国内政”。双方虽然都是以我划线，与我善者为善人；但若以中国人民利益本位为出发点，也可以说毛泽东没有违背人权高于主权的价值判断，因为他此时是站在“弱势同胞”一边，以暴力反抗暴政是人民的权利。哎 </p>
@@ -12,58 +12,50 @@
 <p>毛泽东是一个不完全的思想家，还有一半是政治家，因此奉行双重道德标准，不能“吾道一以贯之”。思想家是以价值观决定立场，政治家则是以立场决定价值观。所以就犯了“时代错乱”，“违反普遍承认的公理”，马克思说过：“光是思想力求成为现实是不够的，现实本身应当力求趋向思想。”(见《马克思恩格斯选集》第一卷10页)他自称是马克思+秦始皇的马秦主义者，但马克思和秦始皇是不可能握手言欢的。马克思争取的目标是人的解放，自由发展，自由联合；秦始皇却要焚书坑儒，偶语弃市，不“坑”他才怪。毛泽东的分裂导致悲剧性的异化，作为主权代表的毛泽东要“坑”的第一个人，却是“主张民主”、“尊重个人”的毛泽东。从此几亿人口只能用一个头脑思考，一个嘴巴说话了。只知地厚不知天高的刘少奇不满于毛的言行不一，要求他“学习毛泽东思想”，“按毛泽东思想办事”，毛竟恼羞成怒，警告刘说：“你有什么了不起!我动一个小指头，就可以把你打倒。”他果然做到了。然而谁能说这是他的胜利呢?哎</p>
 <p>今天重温毛泽东对美国人的谈话，令人感慨系之。让美国人替我们争民主、自由、人权，当然不怎么光彩，王小东有句话说对了：“自由并非恩赐得来”。但中国只出蛇头，不出马丁?路得?金，因而只有偷渡客，没有民权运动。中国也有人权研究机构，但研究得出的结论却是“主权高于人权”，认主不认人，连人是什么也弄不清，不如改称主权研究会。新左派推崇毛式“大民主”，也行不得，因为“大民主”不是什么“广大劳动人民的经济民主与政治民主”，而是用来反对阶级敌人的手段。用于对付官僚主义，就是造反夺权；用于社会整合就是牛鬼蛇神横扫一切，或横扫一切牛鬼蛇神，天下大乱。所以还得靠天上掉馅饼。这个馅饼早就做好了，就是宪法第三十五条：“中华人民共和国公民有言论、出版、集会、结社、游行、示威的自由。”不过都被主权偷吃了，他们不许别人说话，自己却到处发表“重要讲话”，不下雨，叫人家抗旱；发大水，叫人家防洪；烧死人，炸死人，淹死人，叫人家“善后”。好像不打几句官腔，人家就渴死不打井，淹死不上船，死人不收尸。也常见到官员表态，某某首长讲话“给我们指明了方向”，好像不指“方向”，他碰上强盗抢人也不去捉，假冒伪劣、黄毒赌黑也不去查。靠说一通废话，互相推诿逃避责任。新闻节目就成了这些超级明星竞逐奥斯卡金像奖的场所。法国内政部长舍维内芒说：“当部长，就应该紧闭嘴巴；一旦张嘴说话，就该辞职。”因为当官是干实事，不是念三字经。该做的事不做，还要等“指示”，就是失职，这样的官要他何用?自由馅饼就那么大，你的自由多了，我就没有自由了。所以，我们现在所要做的事情，就是讨回馅饼，那本来 属于我们的东西。孔子有言：多言多败，多事多患。信口开河，就是多言；防民之口，就是多事。救治之法，就是叫他闭嘴。像毛泽东说的那样：经常敲打他。 </p>
 <p>——原载文化中国</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=43853 target=_blank class=ltnn>莱斯说，美国将支持中国人权 </a> (2/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=42518 target=_blank class=ltnn>华盛顿邮报：呼吁布什对中国勿以贸易换人权</a> (2/2/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40170 target=_blank class=ltnn>美国之音：莱斯表示：重视美中关系也重视人权法治 </a> (1/28/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=36510 target=_blank class=ltnn>鲍尔：谴责中国人权案是新政府第一件事</a> (1/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30508 target=_blank class=ltnn>布什美中政策面临考验: 人权及军售台湾 </a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=27949 target=_blank class=ltnn>分析：小布什政府将如何迈步 2001年中美关系将有何进展</a> (12/29/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=26904 target=_blank class=ltnn>中美关系应该登高望远</a> (12/25/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=26046 target=_blank class=ltnn>克林顿与中国风雨8年留与他人评说</a> (12/22/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=25036 target=_blank class=ltnn>中国希望布什对华政策不变</a> (12/16/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=24852 target=_blank class=ltnn>美参谋总长担心中国的强大会冲击美国霸业</a> (12/15/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=8164 target=_blank class=ltnn>【书摘】中国的威胁 (The China Threat)</a> (11/7/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=8086 target=_blank class=ltnn>总统候选人谈美中关系</a> (11/7/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=10131 target=_blank class=ltnn>布什戈尔谈美中关系</a> (11/6/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=6513 target=_blank class=ltnn>美国前国防部长：台湾问题将是中美冲突的火种</a> (10/25/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=6390 target=_blank class=ltnn>批评委员会不促进人权民主 赫尔姆斯阻挠美中民间交流计划</a> (10/24/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=4596 target=_blank class=ltnn>克林顿签署PNTR 美中关系翻开新的一页 美国希望进入中国电讯市场</a> (10/11/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=2900 target=_blank class=ltnn>华人社区认为通过予华PNTR将对美中关系发生重大影响</a> (9/20/2000)<br />
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=43853" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">莱斯说，美国将支持中国人权 </a> (2/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42518" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">华盛顿邮报：呼吁布什对中国勿以贸易换人权</a> (2/2/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40170" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美国之音：莱斯表示：重视美中关系也重视人权法治 </a> (1/28/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36510" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">鲍尔：谴责中国人权案是新政府第一件事</a> (1/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30508" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什美中政策面临考验: 人权及军售台湾 </a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=27949" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">分析：小布什政府将如何迈步 2001年中美关系将有何进展</a> (12/29/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=26904" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">中美关系应该登高望远</a> (12/25/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=26046" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">克林顿与中国风雨8年留与他人评说</a> (12/22/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=25036" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">中国希望布什对华政策不变</a> (12/16/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=24852" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美参谋总长担心中国的强大会冲击美国霸业</a> (12/15/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=8164" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">【书摘】中国的威胁 (The China Threat)</a> (11/7/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=8086" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">总统候选人谈美中关系</a> (11/7/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=10131" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什戈尔谈美中关系</a> (11/6/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=6513" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美国前国防部长：台湾问题将是中美冲突的火种</a> (10/25/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=6390" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">批评委员会不促进人权民主 赫尔姆斯阻挠美中民间交流计划</a> (10/24/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=4596" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">克林顿签署PNTR 美中关系翻开新的一页 美国希望进入中国电讯市场</a> (10/11/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=2900" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">华人社区认为通过予华PNTR将对美中关系发生重大影响</a> (9/20/2000)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/6/n30508.md#1">布什美中政策面临考验: 人权及军售台湾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/28/n40170.md#1">美国之音：莱斯表示：重视美中关系也重视人权法治</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/8/n10625340.md#1" target="_blank">玉清心：文革“破四旧”不堪回首 但不能遗忘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549334.md#1">【时事金扫描】乌克兰抓获中共父子间谍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548988.md#1">【直播】NASA新闻发布会：SpaceX Crew-11任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548923.md#1">【佳音时刻】川普警告习：敢动台湾必毁北京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547402.md#1">“0元购”外卖爆单 阿里与美团顶风内卷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/22/n50279.htm">【纪元特稿】甘草： 毛泽东怎样教导美国人</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/22/n50279.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
